Fix Error Prone warnings in `log4j-api`
This suppresses or fixes most Error Prone warning in `log4j-api`.

Only two dozens warnings are left, mainly in the
[TypeParameterUnusedInFormals](https://errorprone.info/bugpattern/TypeParameterUnusedInFormals),
which can not be removed for source compatibility reasons.

Closes #1850.